0.33
  Add ability to specific socket for syslog (Peter Eisch)

  Do the right thing for unimplemented AUTH mechanisms (Brian Szymanski)

  relay_only plugin for smart relay host. (John Peacock)

  Experimental IPv6 support (forkserver only). (Mike Williams)

  Support "module" plugins ("My::Plugin" in the config/plugins file)

  Enhance the spamassassin plugin to support connecting to a remote
  spamd process (Kjetil Kjernsmo). 

  Add SSL encryption method to header to mirror other qmail/SSL patches.
  Add tls_before_auth to suppress AUTH unless TLS has already been 
  established (Robin Johnson).

  Fix "help" command when there's no "smtpgreeting" configured (the default)
  (Thanks to Thomas Ogrisegg)

  Move the Qpsmtpd::Auth POD to a top-level README to be more obvious.

  Add Qpsmtpd::Command to gather all parsing logic in one place (Hanno
  Hecker)

  Fix a spurious newline at the start of messages queued via exim (Devin
  Carraway)

  Make the clamdscan plugin temporarily deny mail if if can't talk to clamd
  (Filippo Carletti)

  Improve Qpsmtpd::Transaction documentation (Fred Moyer)


0.32 - 2006/02/26

  Add logging/file plugin for simple logging to a file (Devin Carraway and
  Peter J. Holzer).

  Add logging/syslog plugin for logging via the syslog facility (Devin
  Carrway)

  Add Qpsmtpd::DSN to return extended SMTP status codes from RFC-1893 and
  patch existing plugins to use it when appropriate (Hanno Hecker).

  Add plugins/tls_cert to generate appropriately shaped self-signed certs for 
  TLS support.  Add explicit use of CA used to sign cert.  Abstract clone()ing
  of connection information when switching to TLS.  Fix the AUTH code to work
  correctly with TLS.

  Add hosts_allow plugin to support pre- and post-connection hooks as well
  as move --max-from-ip tests out of core (Hanno Hecker).

  Improve postfix-queue plugin to support the known processing flags (Hanno
  Hecker).
